# image-to-skatch-art-project

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  MANIFEST.in  Makefile  PROFESSIONAL_FEATURES.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  UPGRADE_SUMMARY.md  animator.py  art_processor.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_cli.py  run_gui.py  stroke_engine.py  utils.py
.github/workflows/: ci.yml
config/: default.yaml
docs/: README.md  api-reference.md  architecture.md  contributing.md  installation.md  quickstart.md  user-guide.md
examples/: README.md  __init__.py  basic_usage.py  batch_processing.py  config_usage.py  custom_style.py
scripts/: build_release.sh  install_dev.bat  install_dev.sh
src/art_animator/: __init__.py  cli.py
src/art_animator/config/: __init__.py  settings.py
src/art_animator/core/: __init__.py  animator.py  art_processor.py  stroke_engine.py
src/art_animator/gui/: __init__.py  app_legacy.py  main.py
src/art_animator/styles/: __init__.py  base.py  registry.py
src/art_animator/utils/: __init__.py  image_utils.py  logger.py  texture_generator.py
tests/: README.md  __init__.py  conftest.py  test_animator.py  test_art_processor.py  test_config.py  test_image_utils.py  test_logger.py  test_stroke_engine.py
