[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-art-animator"
version = "1.0.0"
description = "Professional stroke-level drawing animation system for converting images into realistic artist drawing videos"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Art Animator Team"}
]
keywords = ["animation", "art", "image-processing", "video", "drawing-simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "customtkinter>=5.2.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
art-animator = "art_animator.cli:main"
art-animator-gui = "art_animator.gui.main:launch"

[project.urls]
Homepage = "https://github.com/yourusername/ai-art-animator"
Documentation = "https://ai-art-animator.readthedocs.io"
Repository = "https://github.com/yourusername/ai-art-animator"
Issues = "https://github.com/yourusername/ai-art-animator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=art_animator --cov-report=html --cov-report=term"
